--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0",
     "magento/magento-composer-installer": "*",
+    "magento/module-checkout-agreements": "*",
     "magento/module-sales": "*",
     "magento/module-payment": "*",
     "magento/module-quote": "*",
