--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "MIT"
   ],
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0",
+    "php": "~7.0.13|~7.1.0",
     "magento/magento-composer-installer": "*",
     "magento/module-checkout-agreements": "*",
     "magento/module-sales": "*",
