Resolve request validation error for Magento 2.3.0

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "magento/module-sales": "*",
     "magento/module-payment": "*",
     "magento/module-quote": "*",
-    "wirecard/checkout-client-library": "3.3.5"
+    "wirecard/checkout-client-library": "3.3.5",
+    "wirecard/magento2-ee-compat": "^1.0.0 || ^2.0.0"
   },
   "autoload": {
     "files": [
