--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "qenta/magento2-wcs",
+  "name": "qenta/magento2-qcs",
   "description": "Qenta Checkout Seamless",
   "type": "magento2-module",
   "homepage": "https://www.qenta-cee.at",
@@ -12,8 +12,8 @@
     "MIT"
   ],
   "require": {
-    "php": "~7.3.0",
-    "qenta/checkout-client-library": "5.0.0"
+    "php": "~7.2.5|~7.3.0|~7.4.0",
+    "qenta/checkout-client-library": "5.0.1"
   },
   "autoload": {
     "files": [
