--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   ],
   "require": {
     "php": "~7.2.5|~7.3.0|~7.4.0",
-    "qenta/checkout-client-library": "5.0.1"
+    "qenta/checkout-client-library": "5.0.1",
+    "magento/community-edition": "~2.3.6|~2.4.1"
   },
   "autoload": {
     "files": [
