--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,16 @@
   "homepage": "https://www.qenta-cee.at",
   "support": {
     "email": "support@qenta.com",
-    "docs": "https://guides.wirecard.com"
+    "docs": "https://guides.qenta.com"
 },
   "license": [
     "MIT"
   ],
   "require": {
     "php": "~7.2.5|~7.3.0|~7.4.0",
-    "qenta/checkout-client-library": "5.0.1",
+    "qenta/checkout-client-library": "5.0.1"
+  },
+  "require-dev": {
     "magento/community-edition": "~2.3.6|~2.4.1"
   },
   "autoload": {
